adding all files

--- a/frontend/main/main.html
+++ b/frontend/main/main.html
@@ -1,1 +1,17 @@
- 
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Sidekick</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+  <div id="chat-container">
+    <textarea id="input" placeholder="Paste meeting notes or ask Sidekick..."></textarea>
+    <button onclick="sendMessage()">Create Tickets</button>
+    <div id="response"></div>
+  </div>
+  <script src="main.js"></script>
+</body>
+</html>
