--- a/desktop/index.html
+++ b/desktop/index.html
@@ -60,13 +60,33 @@ function AppProvider({ children }) {
 }
 
 function WelcomeScreen({ onCreate, onSelect }) {
+  const [creating, setCreating] = useState(false);
+  const [name, setName] = useState('');
+
+  const submit = () => {
+    if (!name.trim()) return;
+    onCreate(name.trim());
+    setName('');
+    setCreating(false);
+  };
+
   return (
     <div className="flex flex-col items-center justify-center h-full bg-gray-100">
       <h1 className="text-4xl font-bold mb-8">Welcome to Sidekick</h1>
-      <div className="space-x-4">
-        <button className="px-4 py-2 bg-blue-500 text-white rounded" onClick={onSelect}>Select Existing Project</button>
-        <button className="px-4 py-2 bg-green-500 text-white rounded" onClick={onCreate}>Create New Project</button>
-      </div>
+      {creating ? (
+        <div className="flex flex-col items-center space-y-2">
+          <input className="border p-2" placeholder="Project name" value={name} onChange={e => setName(e.target.value)} />
+          <div className="space-x-2">
+            <button className="px-4 py-1 bg-green-500 text-white rounded" onClick={submit}>Create</button>
+            <button className="px-4 py-1 bg-gray-500 text-white rounded" onClick={() => setCreating(false)}>Cancel</button>
+          </div>
+        </div>
+      ) : (
+        <div className="space-x-4">
+          <button className="px-4 py-2 bg-blue-500 text-white rounded" onClick={onSelect}>Select Existing Project</button>
+          <button className="px-4 py-2 bg-green-500 text-white rounded" onClick={() => setCreating(true)}>Create New Project</button>
+        </div>
+      )}
     </div>
   );
 }
@@ -145,8 +165,7 @@ function App() {
   const [chatHistory, setChatHistory] = useState([]);
   const [chatLoading, setChatLoading] = useState(false);
 
-  const handleCreateProject = async () => {
-    const name = prompt('Enter new project name');
+  const handleCreateProject = async (name) => {
     if (name) await createProject(name);
   };
 
