Add Jira connection flow

--- a/frontend/main/main.html
+++ b/frontend/main/main.html
@@ -9,6 +9,7 @@
 <body>
   <div id="chat-container">
     <textarea id="input" placeholder="Paste meeting notes or ask Sidekick..."></textarea>
+    <button onclick="connectJira()">Connect to Jira</button>
     <button onclick="sendMessage()">Create Tickets</button>
     <div id="response"></div>
   </div>
